# s3-event-bridge

./: .gitignore  Cargo.toml  README.md  cargo.sh
.github/workflows/: release.yml
src/: app.rs  client.rs  conf.rs  jq.rs  lib.rs  main.rs  sign.rs  trigger.rs
