[package]
name = "s3-event-bridge"
version = "0.5.0"
edition = "2021"

[profile.release]
strip = true
lto = true
codegen-units = 1
panic = "abort"

[dependencies]
anyhow = "1.0.71"
aws-config = "0.55.3"
aws-sdk-s3 = "0.28.0"
aws-sdk-sqs = "0.28.0"
aws-smithy-types-convert = { version = "0.55.3", features = ["convert-chrono"] }
aws_lambda_events = { version = "0.10.0", default-features = false, features = ["s3", "sqs"] }
base64ct = { version = "1.6.0", features = ["alloc"] }
chrono = { version = "0.4.26", features = ["serde"] }
envy = "0.4.2"
jq-rs = { version = "0.4.1" , features = ["bundled"] }
lambda_runtime = "0.8.1"
once_cell = "1.18.0"
regex = "1.7.1"
serde = { version = "1.0.164", features = ["derive"] }
serde_json = "1.0.97"
sha1 = "0.10.5"
tempfile = "3.6.0"
tokio = { version = "1", features = ["macros", "process", "rt", "fs", "io-util", "signal", "sync", "time"] }
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", default-features = false, features = ["fmt"] }
