[package]
name = "s3-event-bridge"
version = "0.5.0"
edition = "2021"

[profile.release]
strip = true
lto = true
codegen-units = 1
panic = "abort"

[dependencies]
anyhow = "1.0.75"
aws-config = "0.56.1"
aws-sdk-s3 = "0.30.0"
aws-sdk-sqs = "0.30.0"
aws-smithy-types-convert = { version = "0.56.1", features = ["convert-chrono"] }
aws_lambda_events = { version = "0.10.0", default-features = false, features = ["s3", "sqs"] }
base64ct = { version = "1.6.0", features = ["alloc"] }
chrono = { version = "0.4.30", features = ["serde"] }
envy = "0.4.2"
jaq-interpret = "1.0.0"
jaq-core = "1.0.0"
jaq-parse = "1.0.0"
jaq-std = "1.0.0"
lambda_runtime = "0.8.1"
once_cell = "1.18.0"
regex = "1.9.5"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.105"
sha1 = "0.10.5"
tempfile = "3.8.0"
tokio = { version = "1", features = ["macros", "process", "rt", "fs", "io-util", "signal", "sync", "time"] }
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", default-features = false, features = ["fmt"] }
itertools = "0.11.0"
